<resources>

    <string name="app_name">Study Buddy</string>
    <string name="username">Username</string>
    <string name="submit">Submit</string>
    <string name="password">Password</string>
    <string name="logo_description">Study Buddy Logo</string>
    <string name="title"> Enter Title</string>
    <string name="enter_text">Write a detailed Description</string>
    <string name="enrol_button_status">Enrolled</string>
    <string-array name="forum_list">
        <item>Topic1</item>
        <item>Topic2</item>
        <item>Topic3</item>
        <item>Topic4</item>
    </string-array>

    <string name="assignment_prompt">See Assignments</string>

    <string-array name="member_names">
        <item>Select a Member</item>
        <item>Muireann Mac Carthy</item>
        <item>Amy McCormack</item>
        <item>Eimear Galligan</item>
        <item>Shane Bird</item>
    </string-array>


    <string name="Open">NavBar</string>
    <string name="Close">NavBar</string>

    <string name="courses">Courses</string>
    <string name="stats">Statistics</string>
    <string name="startStudy">Start Study Time</string>
    <string name="addStudy">Add More Study Time</string>
    <string name="addHoursHint">Total hours Studied</string>
    <string name="addProdHoursHint">Total Productive Hours Studied</string>
    <string name="setHours">Set</string>
    <string name="friends">Friends</string>

    <string name="Assignments">Assignments</string>
    <string name="AverageAssignment">Average Assignment Completion Time</string>
    <string name="CourseMembers">Course Members</string>
    <string name="DiscussionForum">Discussion Forum</string>
    <string name="OpenEmail">Open Email</string>

    <string name="shane">Shane Bird</string>
    <string name="amy">Amy McCormack</string>
    <string name="muireann">Muireann MacCarthy</string>
    <string name="eimear">Eimear Galligan</string>
    <string name="dcoyle">David Coyle</string>

    <string name="uni">University College Dublin</string>
    <string name="course">MSc Computer Science</string>
    <string name="addFriend">Add as Friend</string>

    <string name="personalDetails">Personal Details</string>
    <string name="courseDetails">Course Details</string>
    <string name="statsEnrolled">Enrolled Modules and Statistics</string>

    <string name="moduleCode">Module Code</string>
    <string name="prodHours">Productive Hours</string>
    <string name="totalHours">Total Hours</string>
    <string name="editSettings">Edit Settings</string>
    <string name="changeProfile">Change Profile Photo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
