<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/drawerlayout">
    <!-- NavBar tutorial: https://www.youtube.com/watch?v=0WC0VU0hw2w-->
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        tools:context=".User">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="170dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    android:contentDescription="profilePhoto"
                    app:layout_constraintBottom_toTopOf="@+id/divider3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/amyprofile" />

                <TextView
                    android:id="@+id/name_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:text="@string/amy"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />

                <TextView
                    android:id="@+id/uni_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:textAlignment="center"
                    android:text="@string/uni"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name_user" />


                <TextView
                    android:id="@+id/course_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:text="@string/course"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/uni_user" />


                <Button
                    android:id="@+id/button1"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:drawableStart="@drawable/ic_favorite_border_black_24dp"
                    android:layout_marginHorizontal="105dp"
                    android:layout_marginVertical="5dp"
                    android:gravity="center"
                    android:background="@color/colorAccent"
                    android:text="@string/friends" />

                <View
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:background="?android:attr/listDivider"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/courses"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/white"
                    android:padding="5dp"
                    android:textAlignment="textStart"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                </LinearLayout>

                <TextView
                    android:id="@+id/stats"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/stats"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/white"
                    android:padding="5dp"
                    android:textAlignment="textStart"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/BarChart"
                    android:layout_width="match_parent"
                    android:layout_margin="10dp"
                    android:layout_height="300dp"/>


                <TextView
                    android:id="@+id/Friends"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/friends"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/white"
                    android:padding="5dp"
                    android:layout_marginBottom="10dp"
                    android:textAlignment="textStart"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/FriendImage1"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_weight=".33"
                        android:layout_marginLeft="20dp"
                        android:layout_gravity="center"
                        android:onClick="openHome"
                        app:srcCompat="@drawable/dcoyle_image" />

                    <ImageView
                        android:id="@+id/FriendImage2"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_weight=".33"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_gravity="center"
                        android:onClick="openShaneV"
                        app:srcCompat="@drawable/shaneprofile" />

                    <ImageView
                        android:id="@+id/FriendImage3"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_weight=".33"
                        android:layout_marginRight="20dp"
                        android:layout_gravity="center"
                        android:onClick="openEimearV"
                        app:srcCompat="@drawable/eimearprofile" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/DavidButton"
                        android:layout_width="wrap_content"
                        android:background="@color/white"
                        android:textAllCaps="false"
                        android:layout_weight=".33"
                        android:layout_gravity="center"
                        android:layout_marginRight="40dp"
                        android:layout_marginLeft="30dp"
                        style="?android:attr/borderlessButtonStyle"
                        android:text = "@string/dcoyle"
                        android:layout_height="wrap_content" />

                    <Button
                        android:id="@+id/ShaneButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:textAllCaps="false"
                        android:layout_weight=".33"
                        style="?android:attr/borderlessButtonStyle"
                        android:text = "@string/shane"
                        android:layout_gravity="center"
                        android:layout_marginRight="20dp"/>

                    <Button
                        android:id="@+id/EimearButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:textAllCaps="false"
                        android:layout_weight=".33"
                        style="?android:attr/borderlessButtonStyle"
                        android:text="@string/eimear"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"/>


                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </android.support.constraint.ConstraintLayout>
    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nav_view"
        android:layout_gravity="start"
        app:headerLayout="@layout/navigation_header"
        app:menu="@menu/navigation_menu">


    </android.support.design.widget.NavigationView>
    <!-- NavBar tutorial: https://www.youtube.com/watch?v=0WC0VU0hw2w-->

</android.support.v4.widget.DrawerLayout>