<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    android:id="@+id/drawerlayout"
    >
    <!-- NavBar tutorial: https://www.youtube.com/watch?v=0WC0VU0hw2w-->





    <ScrollView
        android:layout_width="368dp"
        android:layout_height="500dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                app:srcCompat="@drawable/study_buddy_logo"
                />

            <TextView
                android:id="@+id/textViewCourseCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="COMP47520"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                app:fontFamily="sans-serif"

                />

            <TextView
                android:id="@+id/textViewCourseName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Programming for IOT"
                android:textAlignment="center"
                android:textSize="18sp"
                app:fontFamily="sans-serif"
                tools:text="Android Programming"
                />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/enrolButtonIOT"
                android:layout_width="203dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:drawableEnd="@drawable/ic_favorite_border_black_24dp"
                android:text="@string/enrol_button_status"
                android:textStyle="bold"
                app:backgroundTint="#86A3A8"
                app:fontFamily="sans-serif" />
            <!-- button tutorial: https://abhiandroid.com/ui/button-->


            <TextView
                android:id="@+id/ViewAssignments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#2C8C99"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:padding="4dp"
                android:text="@string/Assignments"
                android:textAlignment="textStart"
                android:textSize="20sp"
                android:textStyle="bold"
                app:fontFamily="sans-serif"
                android:textColor="#FFFFFF"/>

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinnerIOT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:padding="15dp"
                android:textSize="20sp"
                app:fontFamily="sans-serif"
                app:backgroundTint="@color/colorPrimary"
                >

            </android.support.v7.widget.AppCompatSpinner>
            <!-- Spinner tutorial: https://www.youtube.com/watch?v=NoSri0OSOaA-->


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/assignmentFragButtonIOT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
                android:text="Add Assignment"
                app:backgroundTint="#FFFFFF"
                app:fontFamily="sans-serif"
                />

            <FrameLayout
                android:id="@+id/placeholderIOT"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
            </FrameLayout>

            <TextView
                android:id="@+id/pieChart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#2C8C99"
                android:layout_marginBottom="8dp"
                android:padding="4dp"
                android:text="@string/AverageAssignment"
                android:textSize="20sp"
                android:textStyle="bold"
                app:fontFamily="sans-serif"
                android:textColor="#FFFFFF"/>

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/firstPie"
                android:layout_width="250dp"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:layout_height="250dp"/>

            <TextView
                android:id="@+id/courseMembersIOT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#2C8C99"
                android:layout_marginBottom="8dp"
                android:padding="4dp"
                android:text="@string/CourseMembers"
                android:textSize="20sp"
                android:textStyle="bold"
                app:fontFamily="sans-serif"
                android:textColor="#FFFFFF"/>

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/memberSpinnerIOT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textAlignment="textStart"
                android:padding="15dp"
                android:textSize="20sp"
                android:entries="@array/member_names"
                app:fontFamily="sans-serif"
                app:backgroundTint="@color/colorPrimary"

                >

            </android.support.v7.widget.AppCompatSpinner>

            <TextView
                android:id="@+id/MessageGmailIOT"
                android:layout_width="143dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:text="Message a Member"
                android:textAlignment="textStart"
                android:textSize="15sp"
                app:fontFamily="sans-serif" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/openGmailIOT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:drawableEnd="@drawable/ic_email_black_24dp"
                android:text="open gmail"
                app:backgroundTint="#86A3A8"
                app:fontFamily="sans-serif"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/DiscussionForumIOT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#2C8C99"
                android:layout_marginBottom="8dp"
                android:padding="4dp"
                android:text="@string/DiscussionForum"
                android:textAlignment="textStart"
                android:textSize="20sp"
                android:textStyle="bold"
                app:fontFamily="sans-serif"
                android:textColor="#FFFFFF"/>

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/ForumSpinnerIOT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:entries="@array/forum_list"
                app:fontFamily="sans-serif"
                android:padding="15dp"
                android:textSize="20sp"
                app:backgroundTint="@color/colorPrimary">
            </android.support.v7.widget.AppCompatSpinner>
            <!-- Spinner tutorial: https://www.youtube.com/watch?v=NoSri0OSOaA-->



            <!-- button tutorial: https://abhiandroid.com/ui/button-->

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/addForumTopicIOT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
                android:text="Add Forum Topic"
                app:backgroundTint="#FFFFFF"
                app:fontFamily="sans-serif" />

            <FrameLayout
                android:id="@+id/forumPlaceholderIOT"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp">
            </FrameLayout>

        </LinearLayout>
    </ScrollView>


    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nav_view"
        android:layout_gravity="start"
        app:headerLayout="@layout/navigation_header"
        app:menu="@menu/navigation_menu">

    </android.support.design.widget.NavigationView>
    <!-- NavBar tutorial: https://www.youtube.com/watch?v=0WC0VU0hw2w-->

</android.support.v4.widget.DrawerLayout>